fix: revert desktop max width to fix extra space

--- a/src/components/Technology/Technology.scss
+++ b/src/components/Technology/Technology.scss
@@ -4,8 +4,8 @@
 .technology {
   background-color: $accent;
   color: white;
+
   @include desktop {
-    width: $desktop-max-width;
     margin: 0 auto;
   }
 
